<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ProfileFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:background="@color/teal_200"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="4">

            <ImageView
                android:id="@+id/person_img"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:backgroundTint="@color/white"
                android:src="@drawable/ic_round_account_circle_24"
                android:visibility="visible" />
            <EditText
                android:id="@+id/person_name"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:text="@string/Account_name"
                android:gravity="center"
                android:textSize="28dp"
                android:textColor="@color/white"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="5">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="68dp"
                    android:layout_height="53dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="40dp"
                    android:src="@drawable/ic_baseline_email_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="56dp"
                    android:text="@string/Account_email"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.137"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="68dp"
                    android:layout_height="53dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="120dp"
                    android:src="@drawable/ic_baseline_phone_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="48dp"
                    android:ems="10"
                    android:hint="@string/addPhoneNumber"
                    android:inputType="phone"
                    android:minHeight="48dp"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/email" />

                <Button
                    android:id="@+id/save_btn"
                    android:layout_width="211dp"
                    android:layout_height="49dp"
                    android:layout_marginBottom="108dp"
                    android:backgroundTint="@color/teal_700"
                    android:outlineAmbientShadowColor="@color/white"
                    android:text="@string/save"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>




        </androidx.appcompat.widget.LinearLayoutCompat>




    </androidx.appcompat.widget.LinearLayoutCompat>


</FrameLayout>